# llmscrumsurvey

./: .gitignore  CITATION.cff  DATA_README.md  LICENSE  README.md  pyproject.toml
data/: merged_survey_data-processing.xlsx  merged_survey_data.xlsx
reports/: 00_filtering_pipeline.csv  01_profile_consenting_N158_academic_education.csv  01_profile_consenting_N158_age_group.csv  01_profile_consenting_N158_country.csv  01_profile_consenting_N158_scrum_experience_years.csv  01_profile_consenting_N158_scrum_knowledge.csv  01_profile_final_analytic_N79_academic_education.csv  01_profile_final_analytic_N79_age_group.csv  01_profile_final_analytic_N79_country.csv  01_profile_final_analytic_N79_scrum_experience_years.csv  01_profile_final_analytic_N79_scrum_knowledge.csv  01_profile_scrum_experienced_N128_academic_education.csv  01_profile_scrum_experienced_N128_age_group.csv  01_profile_scrum_experienced_N128_country.csv  01_profile_scrum_experienced_N128_scrum_experience_years.csv  01_profile_scrum_experienced_N128_scrum_knowledge.csv  01_profile_worked_scrum_N111_academic_education.csv  01_profile_worked_scrum_N111_age_group.csv  01_profile_worked_scrum_N111_country.csv  01_profile_worked_scrum_N111_scrum_experience_years.csv  01_profile_worked_scrum_N111_scrum_knowledge.csv  02_org_project_final_analytic_N79_application_domain.csv  02_org_project_final_analytic_N79_organization_industry.csv  02_org_project_final_analytic_N79_organization_size.csv  02_org_project_final_analytic_N79_primary_role.csv  02_org_project_final_analytic_N79_problem_domain.csv  (+56 more)
(+7 files in other folders)
